# sb

./: .SRCINFO  .gitignore  .gitmodules  Cargo.toml  PKGBUILD  README.md
src/: app.rs  binaries.rs  cli.rs  clipboard.rs  descriptions.rs  interactive_app.rs  main.rs  man.rs  roff.rs  simple_app.rs  states.rs  widgets.rs
